# statmod-20-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  annotated.html  app_2CMakeLists_8txt.html  classMainWindow.html  classMyMath_1_1Box.html  classOptimization_1_1Method_1_1AbstractMethod.html  classOptimization_1_1Method_1_1NelderMead.html  classOptimization_1_1Method_1_1RandomSearch.html  dir_80ae717efcb24c7248857255a37f1474.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_b512c8ffeeacf669394259bae5bdfa7f.html  dir_c9acb018e124dbd649e8756e2a5f4c4c.html  dir_d422163b96683743ed3963d4aac17747.html  dir_f50232b516515101c500136d06c6cbec.html  files.html  index.html  lib_2mymath_2CMakeLists_8txt.html  main_8cpp.html  mainwindow_8cpp.html  mainwindow_8h.html  method_8cpp.html  method_8hpp.html  modules.html  mymath_8cpp.html  mymath_8hpp.html  mypackages.nix  namespaceEigen.html  namespaceMyMath.html  namespaceOptimization.html  namespaceOptimization_1_1Method.html  namespaceOptimization_1_1StopCriterion.html  namespaceUi.html  namespacerun.html  namespaces.html  optimization_8cpp.html  optimization_8hpp.html  optimization__parameters_8cpp.html  (+21 more)
.github/workflows/: build.yml  docs.yml
app/: CMakeLists.txt  cli.cpp  cli.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  run.cpp  run.hpp
docs/: Doxyfile-mcss  Doxyfile.in  conf.py
lib/: CMakeLists.txt
lib/mymath/: CMakeLists.txt  mymath.cpp
lib/mymath/include/: mymath.hpp
lib/optimization/: CMakeLists.txt  method.cpp  optimization.cpp  optimization_parameters.cpp  stop_criterion.cpp
lib/optimization/include/: method.hpp  optimization.hpp  optimization_parameters.hpp  stop_criterion.hpp
lib/qcustomplot/: CMakeLists.txt
